Small cleanup and functional improvements

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -221,3 +221,12 @@ hr {
 .spacer {
   padding-bottom: 0.65em;
 }
+
+.stickyHeader {
+  position: sticky;
+  top: 0;
+}
+
+.monospace {
+  font-family: monospace;
+}
