vue-tsc working

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -296,7 +296,7 @@ hr {
   padding-bottom: 1em;
   padding-right: 1.5em;
   padding-left: 1em;
-  color: white
+  color: white;
 }
 
 .error-box {
@@ -307,7 +307,7 @@ hr {
   padding-bottom: 1em;
   padding-right: 1.5em;
   padding-left: 1em;
-  color: white
+  color: white;
 }
 
 .center-div {
