--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -343,3 +343,16 @@ hr {
 .pre-formatted {
   white-space: pre;
 }
+.pre-formatted ul,
+.pre-formatted ol {
+  white-space: normal;
+  list-style-type: disc;
+  margin-left: 1.5em;
+}
+.pre-formatted ol {
+  list-style-type: decimal;
+}
+
+.pre-formatted {
+  white-space: pre;
+}
